k8s/guacamole/06-host-ssh-service.example.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-ssh
  namespace: guacamole
spec:
  ports:
    - name: ssh
      port: 22
      targetPort: 22
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: host-ssh
  namespace: guacamole
  labels:
    kubernetes.io/service-name: host-ssh
addressType: IPv4
ports:
  - name: ssh
    protocol: TCP
    port: 22
endpoints:
  - addresses:
      - replace-with-k3s-node-ip
