k8s/guacamole/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
spec:
  ingressClassName: traefik
  rules:
    - host: ssh.yinshengphy.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole
                port:
                  number: 8080
